# blosc_reader

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_test.yml  deploy.yml  python-publish.yml
src/: __init__.py
src/blosc_reader/: __init__.py  blosc_reader.py
