[metadata]
name = blosc_reader
version = 0.1.0
url = https://github.com/syedalimohsinbukhari/blosc_reader
author = Syed Ali Mohsin Bukhari
author_email = syedali.b@outlook.com
license = MIT
license_files = LICENSE
description = A simple and dirty `blosc_reader` file reader and plotter.
long_description = file: README.md
long_description_content_type = "text/markdown"

[options]
package_dir =
    = src

packages = find:
python_requires = ">3.9"

install_requires =
    blosc==1.11.1
    matplotlib==3.8.4
    setuptools==70.0.0

[options.packages.find]
where = src

classifiers =
    License :: OSI Approved :: CC License
    Programming Language :: Python :: 3.9
